--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4"
     "@eslint/eslintrc": "^3",
-    "@types/canvas-confetti": "^1.9.0",
+    "@types/canvas-confetti": "^1.9.0"
   }
 }
