--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
     "@eslint/eslintrc": "^3",
     "@types/canvas-confetti": "^1.9.0"
   }
