--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "canvas-confetti": "^1.9.3",
+    "googleapis": "^148.0.0",
     "lucide-react": "^0.483.0",
     "next": "^15.2.4",
     "react": "^19.1.0",
